kubernetes/apps/default/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    gethomepage.dev/description: "Self-hosted git"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Development"
    gethomepage.dev/icon: "forgejo"
    gethomepage.dev/name: "Forgejo"
spec:
  hostnames:
    - "forgejo.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
